# mapgeo2fbx

./: .gitignore  Cargo.toml  DEVELOPER.md  LICENSE-APACHE  README.md
.github/workflows/: release.yml
crates/mapgeo2fbx-cli/: Cargo.toml
crates/mapgeo2fbx-cli/src/: args.rs  banner.rs  batch.rs  interactive.rs  logging.rs  main.rs  ui.rs
crates/mapgeo2fbx-cli/tests/: cli_tests.rs
crates/mapgeo2fbx-core/: Cargo.toml
crates/mapgeo2fbx-core/src/: decode.rs  error.rs  fbx.rs  info.rs  lib.rs
crates/mapgeo2fbx-core/tests/: decode_tests.rs  fbx_tests.rs  info_tests.rs  real_file_smoke.rs
docs/superpowers/plans/: 2026-07-01-mapgeo-to-fbx.md
docs/superpowers/specs/: 2026-07-01-mapgeo-to-fbx-design.md
